Musclegroups Create/Index/New

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,6 @@
-Middle
+<h2>Recently Added</h2>
+<div>
+    <% musclegroups.forEach(musclegroup => { %>
+        <img height="150" width="100" src="<%= musclegroup.coverImagepath %>">
+    <% }) %>
+</div>
