--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,8 @@
         <ul>
             <li><a href="/exercises">Exercises</a></li>
             <li><a href="/exercises/new">Add Exercises</a></li>
+            <li><a href="/musclegroups">Musclegroups</a></li>
+            <li><a href="/musclegroups/new">Add Musclegroup</a></li>
         </ul>
     </nav>
 </header>
