--- a/views/musclegroups/new.ejs
+++ b/views/musclegroups/new.ejs
@@ -1,5 +1,5 @@
 <h2>New Musclegroup</h2>
-<form action="/musclegroups" method="POST" enctype="multipart/form-data">
+<form action="/musclegroups" method="POST">
     <%- include('_form_fields') %>
     <a href="/musclegroups">Cancel</a>
     <button type="submit">Create</button>
