Finish musclegroup controllers

--- a/views/exercises/show.ejs
+++ b/views/exercises/show.ejs
@@ -4,6 +4,9 @@
 <% if(musclegroupsByExercise.length > 0) { %>
     <h2>Muclegroups By Exercise</h2>
     <% musclegroupsByExercise.forEach(musclegroup => { %>
-        <img height="150" width="100" src="<%= musclegroup.coverImagepath %>">
+        <a href="/musclegroups/<%= musclegroup.id %>"> 
+            <img height="150" width="100" src="<%= musclegroup.coverImagepath %>">
+        </a>
     <% }) %>
 <% } %>
+
