--- a/views/musclegroups/index.ejs
+++ b/views/musclegroups/index.ejs
@@ -26,6 +26,8 @@
 <br/>
 <div>
     <% musclegroups.forEach(musclegroup => { %>
-        <img height="150" width="100" src="<%= musclegroup.coverImagepath %>">
+        <a href="/musclegroups/<%= musclegroup.id %>"> 
+            <img height="150" width="100" src="<%= musclegroup.coverImagepath %>">
+        </a>
     <% }) %>
 </div>
