--- a/views/Layouts/layout.ejs
+++ b/views/Layouts/layout.ejs
@@ -17,5 +17,8 @@
   <%- include('../partials/header.ejs') %>
   <%- include('../partials/errorMessage.ejs') %>
   <%- body %>
+  <form action="/logout?_method=DELETE" method="POST">
+    <button type="submit">Log Out</button>
+  </form>
 </body>
 </html>
