--- a/views/exercises/show.ejs
+++ b/views/exercises/show.ejs
@@ -1,4 +1,4 @@
-<h2><%= exercise.name %></h2>
+<h2 class="page-header"><%= exercise.name %></h2>
 <a href="/exercises/<%= exercise.id %>/edit">Edit</a>
 <%- include('../partials/deleteForm', {url: `/exercises/${exercise.id}`}) %>
 <% if(musclegroupsByExercise.length > 0) { %>
