--- a/views/musclegroups/edit.ejs
+++ b/views/musclegroups/edit.ejs
@@ -1,4 +1,4 @@
-<h2>Edit Musclegroup</h2>
+<h2 class="page-header">Edit Musclegroup</h2>
 <form action="/musclegroups/<%= musclegroup.id %>?_method=PUT" method="POST">
     <%- include('_form_fields') %>
     <a href="/musclegroups">Cancel</a>
