--- a/views/musclegroups/index.ejs
+++ b/views/musclegroups/index.ejs
@@ -1,4 +1,4 @@
-<h2>Search Musclegroups</h2>
+<h2 class="page-header">Search Musclegroups</h2>
 <form action="/musclegroups" method="GET">
     <div>
         <label>Title</label>
