--- a/views/musclegroups/new.ejs
+++ b/views/musclegroups/new.ejs
@@ -1,4 +1,4 @@
-<h2>New Musclegroup</h2>
+<h2 class="page-header">New Musclegroup</h2>
 <form action="/musclegroups" method="POST">
     <%- include('_form_fields') %>
     <a href="/musclegroups">Cancel</a>
