--- a/views/Layouts/layout.ejs
+++ b/views/Layouts/layout.ejs
@@ -11,14 +11,22 @@
   <script defer src="https://unpkg.com/filepond-plugin-image-resize/dist/filepond-plugin-image-resize.js"></script>
   <script defer src="https://unpkg.com/filepond/dist/filepond.js"></script>
   <script defer src="/javascripts/fileUpload.js"></script>
-  <title>Mybrary</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/stylesheets/main.css" />
+  <title>FitForge</title>
 </head>
 <body>
+<div class="container">
   <%- include('../partials/header.ejs') %>
-  <%- include('../partials/errorMessage.ejs') %>
-  <%- body %>
-  <form action="/logout?_method=DELETE" method="POST">
-    <button type="submit">Log Out</button>
-  </form>
+  <div class="inner-container">
+    <%- include('../partials/errorMessage.ejs') %>
+    <%- body %>
+    <form action="/logout?_method=DELETE" method="POST">
+      <button type="submit">Log Out</button>
+    </form>
+  </div>
+</div>
 </body>
 </html>
