--- a/views/exercises/edit.ejs
+++ b/views/exercises/edit.ejs
@@ -1,4 +1,4 @@
-<h2>Edit Exercise</h2>
+<h2 class="page-header">Edit Exercise</h2>
 <form action="/exercises/<%= exercise.id %>?_method=PUT" method="POST">
     <%- include('_form_fields') %>
     <a href="/exercises/<%= exercise.id %>">Cancel</a>
