--- a/views/exercises/new.ejs
+++ b/views/exercises/new.ejs
@@ -1,4 +1,4 @@
-<h2>New Exercise</h2>
+<h2 class="page-header">New Exercise</h2>
 <form action="/exercises" method="POST">
     <%- include('_form_fields') %>
     <a href="/exercises">Cancel</a>
