--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<h2>Recently Added</h2>
+<h2 class="page-header">Recently Added</h2>
 <div>
     <% musclegroups.forEach(musclegroup => { %>
         <a href="/musclegroups/<%= musclegroup.id %>"> 
