--- a/views/musclegroups/show.ejs
+++ b/views/musclegroups/show.ejs
@@ -1,4 +1,4 @@
-<h2><%= musclegroup.title %></h2>
+<h2 class="page-header"><%= musclegroup.title %></h2>
 <img widt="100" height="150" src="<%= musclegroup.coverImagepath %>">
 <div>
     Exercise: <%= musclegroup.exercise.name %>
