--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header>
-    <nav>
-        <a href="/">FitForge</a>
+    <nav class="header-nav">
+        <a class="header-title" href="/">FitForge</a>
         <ul>
             <li><a href="/exercises">Exercises</a></li>
             <li><a href="/exercises/new">Add Exercises</a></li>
