--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,7 +6,7 @@
   <title>Register</title>
 </head>
 <body>
-  <h1>Register</h1>
+  <h1 class="page-header">Register</h1>
   <% if (error) { %>
     <div class="error"><%= error %></div>
   <% } %>
