--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -82,7 +82,7 @@ body {
 
 .btn-primary {
     color: hsl(200, 100%, 20%);
-    background-color: hsl(200, 100%, 83%);
+    background-color: hsl(200, 100%, 87%);
     border-color: black;
 }
 
@@ -116,3 +116,78 @@ body {
 .btn-row > *:first-child {
     margin-left: 0;
 }
+
+/*Forms*/
+
+.form-row {
+    display: flex;
+    margin-bottom: .5rem;
+}
+
+.form-item {
+    display: flex;
+    flex-direction: column;
+    margin-left: 2rem;
+    flex-grow: 1;
+    flex-basis: 0;
+}
+
+.form-item *:first-child {
+    margin-left: 0;
+}
+
+.form-item-no-grow {
+    flex-grow: 0;
+}
+
+.form-row-end {
+    justify-content: flex-end;
+}
+
+.form-item > label {
+    font-size: 1.2rem;
+    margin-bottom: .25rem;
+    margin-left: .25rem;
+}
+
+.form-item input, .form-item select, .form-item textarea {
+    height: 2rem;
+    padding: .25rem .5rem;
+    border-radius: .25rem;
+    border: 1px solid hsl(200, 100%, 50%);
+    background-color: hsl(200, 100%, 31%);
+    color: hsl(200, 100%, 87%);
+    font-size: 1rem;
+    font-weight: normal;
+    font-family: "Monserrat", sans-serif;
+    outline: none;
+}
+
+.form-item textarea {
+    height: 100%;
+    resize: none;
+}
+
+.form-item select option{
+    background-color: black;
+}
+
+.form-item input:focus, .form-item select:focus, .form-item textarea:focus {
+    border-color: hsl(200, 100%, 80%);
+}
+
+.filepond--root {
+    font-family: "Monserrat", sans-serif;
+    margin-bottom: 0;
+}
+
+.filepond--panel-root {
+    background-color: hsl(200, 100%, 31%);
+    border: 1px solid hsl(200, 100%, 50%);
+}
+
+.filepond--drop-lable {
+    color: hsl(200, 100%, 87%);
+    font-size: inherit;
+}
+
