--- a/views/exercises/index.ejs
+++ b/views/exercises/index.ejs
@@ -1,8 +1,15 @@
 <h2 class="page-header">Search Exercises</h2>
 <form action="/exercises" method="GET">
-    <label>Name</label>
-    <input type="text" name="name" value="<%= searchOptions.name %>">
-    <button type="submit">Search</button>
+    <div class="form-row">
+
+    </div>
+    <div class="form-item">
+        <label>Name</label>
+        <input type="text" name="name" value="<%= searchOptions.name %>">
+    </div>
+    <div class="form-row form-row-end">
+        <button class="btn btn-primary" type="submit">Search</button>
+    </div>
 </form>
 <br/>
 <% exercises.forEach(exercise => { %>
