--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,5 +7,8 @@
             <li><a href="/musclegroups">Musclegroups</a></li>
             <li><a href="/musclegroups/new">Add Musclegroup</a></li>
         </ul>
+        <form action="/logout?_method=DELETE" method="POST">
+            <button class="btn btn-primary" type="submit">Log Out</button>
+          </form>
     </nav>
 </header>
