--- a/views/exercises/new.ejs
+++ b/views/exercises/new.ejs
@@ -1,6 +1,8 @@
 <h2 class="page-header">New Exercise</h2>
 <form action="/exercises" method="POST">
     <%- include('_form_fields') %>
-    <a href="/exercises">Cancel</a>
-    <button type="submit">Create</button>
+    <div class="form-row form-row-end btn-row">
+        <a class="btn btn-danger" href="/exercises">Cancel</a>
+        <button class="btn btn-primary" type="submit">Create</button>
+    </div>
 </form>
