--- a/views/musclegroups/index.ejs
+++ b/views/musclegroups/index.ejs
@@ -1,27 +1,33 @@
 <h2 class="page-header">Search Musclegroups</h2>
 <form action="/musclegroups" method="GET">
-    <div>
-        <label>Title</label>
-        <input type="text" name="title" value="<%= searchOptions.title %>">
+    <div class="form-row">
+        <div class="form-item">
+            <label>Title</label>
+            <input type="text" name="title" value="<%= searchOptions.title %>">
+        </div>
     </div>
 
-    <div>
-        <label>Difficulty Level</label>
-        <select name="difficultyLevel">
-            <option value="" <% if (!searchOptions.difficultyLevel) { %>selected <% } %>>Any</option>
+    <div class="form-row">
+        <div class="form-item">
+            <label>Difficulty Level</label>
+            <select name="difficultyLevel">
+                <option value="" <% if (!searchOptions.difficultyLevel) { %>selected <% } %>>Any</option>
 
-            <option value="Beginner" <% if (searchOptions.difficultyLevel === 
-            'Beginner') { %>selected <% } %>>Beginner</option>
+                <option value="Beginner" <% if (searchOptions.difficultyLevel === 
+                'Beginner') { %>selected <% } %>>Beginner</option>
 
-            <option value="Intermediate" <% if (searchOptions.difficultyLevel === 
-            'Intermediate') { %>selected <% } %>>Intermediate</option>
-            
-            <option value="Advanced" <% if (searchOptions.difficultyLevel === 
-            'Advanced') { %>selected <% } %>>Advanced</option>
-        </select>
+                <option value="Intermediate" <% if (searchOptions.difficultyLevel === 
+                'Intermediate') { %>selected <% } %>>Intermediate</option>
+                
+                <option value="Advanced" <% if (searchOptions.difficultyLevel === 
+                'Advanced') { %>selected <% } %>>Advanced</option>
+            </select>
+        </div>
     </div>
 
-    <button type="submit">Search</button>
+    <div class="form-row form-row-end">
+        <button class="btn btn-primary" type="submit">Search</button>
+    </div>
 </form>
 <br/>
 <div>
