--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,3 @@
 <h2 class="page-header">Recently Added</h2>
-<div>
-    <% musclegroups.forEach(musclegroup => { %>
-        <a href="/musclegroups/<%= musclegroup.id %>"> 
-            <img height="150" width="100" src="<%= musclegroup.coverImagepath %>">
-        </a>
-    <% }) %>
-</div>
+<%- include('partials/muscGrid', { musclegroups : musclegroups, large: true}) %>
 
