--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,17 +1,21 @@
 
 <h1 class="page-header">Login</h1>
-<% if (messages.error) { %>
-  <%= messages.error %>
-<% } %>
+<div class="error-message">
+  <% if (messages.error) { %>
+    <%= messages.error %>
+  <% } %>
+</div>
 <form action="/login" method="POST">
-  <div>
-    <label for="email">Email</label>
-    <input type="email" id="email" name="email" required>
+  <div class="login">
+    <div class="login-item form-item">
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" required>
+    </div>
+    <div class="login-item form-item">
+      <label for="password">Password</label>
+      <input type="password" id="password" name="password" required>
+    </div>
+    <button class="btn btn-primary" type="submit">Login</button>
+  </form> 
+  <a class="btn btn-danger" href="/register">Register</a>
   </div>
-  <div>
-    <label for="password">Password</label>
-    <input type="password" id="password" name="password" required>
-  </div>
-  <button type="submit">Login</button>
-</form>
-<a href="/register">Register</a>
