--- a/views/musclegroups/show.ejs
+++ b/views/musclegroups/show.ejs
@@ -1,21 +1,25 @@
 <h2 class="page-header"><%= musclegroup.title %></h2>
-<img widt="100" height="150" src="<%= musclegroup.coverImagepath %>">
-<div>
-    Exercise: <%= musclegroup.exercise.name %>
-</div>
-<div>
-    Difficulty Level: <%= musclegroup.difficultyLevel %>
-</div>
-<div>
-    Duration (Min): <%= musclegroup.duration %>
-</div>
-<div>
-    Description: <%= musclegroup.description %>
-</div>
+<div class="musclegroup-details">
+    <div >
+        <img class="musclegroup-cover" src="<%= musclegroup.coverImagepath %>">
+        <div class="musclegroup-details-btn-grid">
+            <a class="btn btn-primary" href="/musclegroups/<%= musclegroup.id %>/edit">Edit</a>
+        <%- include('../partials/deleteForm', {url: `/musclegroups/${musclegroup.id}` }) %>
+        <a class="btn btn-primary musclegroup-details-exercise-button" href="/exercises/<%= musclegroup.exercise.id %>">View Exercise</a>
+        </div>
+    </div>
+    <div class="musclegroup-details-grid">
+        <div class="musclegroup-details-lable">Exercise:</div>
+        <div><%= musclegroup.exercise.name %></div>
+        <div class="musclegroup-details-lable">Difficulty Level:</div>
+        <div><%= musclegroup.difficultyLevel %></div>
+        <div class="musclegroup-details-lable">Duration (Min):</div>
+        <div><%= musclegroup.duration %></div>
+        <div class="musclegroup-details-lable">Description:</div>
+        <div><%= musclegroup.description %></div>
 
-<a href="/musclegroups/<%= musclegroup.id %>/edit">Edit</a>
-<%- include('../partials/deleteForm', {url: `/musclegroups/${musclegroup.id}` }) %>
-<a href="/exercises/<%= musclegroup.exercise.id %>">View Exercise</a>
+    </div>
+</div>
 
 
 
