--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,23 +7,27 @@
 </head>
 <body>
   <h1 class="page-header">Register</h1>
-  <% if (error) { %>
-    <div class="error"><%= error %></div>
-  <% } %>
-  <form action="/register" method="POST">
-    <div>
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required>
-    </div>
-    <div>
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
-    </div>
-    <div>
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required>
-    </div>
-    <button type="submit">Register</button>
-  </form>
+  <div class="error-message">
+    <% if (error) { %>
+      <div class="error"><%= error %></div>
+    <% } %>
+  </div>
+  <div class="register">
+    <form action="/register" method="POST">
+      <div class="register-item form-item">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required>
+      </div>
+      <div class="register-item form-item">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+      </div>
+      <div class="register-item form-item">
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+      </div>
+      <button class="btn btn-primary" type="submit">Register</button>
+    </form>
+  </div>
 </body>
 </html>
