--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,4 @@
+<!--HTML för en header som ska vara med på alla sidor-->
 <header>
     <nav class="header-nav">
         <a class="header-title" href="/">FitForge</a>
