--- a/views/exercises/show.ejs
+++ b/views/exercises/show.ejs
@@ -1,10 +1,12 @@
 <h2 class="page-header"><%= exercise.name %></h2>
+
+<!-- Knappar för att redigera och ta bort övningen -->
 <div class="btn-row">
     <a class="btn btn-primary" href="/exercises/<%= exercise.id %>/edit">Edit</a>
     <%- include('../partials/deleteForm', {url: `/exercises/${exercise.id}`}) %>
 </div>
+
 <% if(musclegroupsByExercise.length > 0) { %>
     <h2 class="page-header">Muclegroups By Exercise</h2>
     <%- include('../partials/muscGrid', { musclegroups : musclegroupsByExercise}) %>
 <% } %>
-
